--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -89,7 +89,7 @@ jobs:
         env:
           HD_NODE_ENV: development
           HD_API_URL: https://w8-saleor-pr-${{ github.event.pull_request.number }}.herokuapp.com/
-          HD_PLUGINS: social-login provinces otp vendor
+          HD_PLUGINS: social-login,provinces,otp,vendor
 
       - name: Update Gateway Deployment Link Status
         if: always()
