FIX: federation env name

--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -74,7 +74,7 @@ jobs:
         with:
           step: start
           token: ${{ secrets.GITHUB_TOKEN }}
-          env: Preview Backend
+          env: Preview Gateway
           ref: ${{ github.head_ref }}
 
       - name: Deploy Federation
