--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,5 @@
 # the repo. Unless a later match takes precedence,
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
-* @wecre8-ecommerce/qa @wecre8-ecommerce/backend
+/saleor/plugins/ @wecre8-ecommerce/qa @wecre8-ecommerce/backend
+* @HazemKhaled
