--- a/.github/workflows/pr-deploy.yml
+++ b/.github/workflows/pr-deploy.yml
@@ -4,6 +4,7 @@ on: pull_request
 
 jobs:
   deploy-saleor-pr:
+    if: ! github.event.pull_request.draft
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -61,6 +62,7 @@ jobs:
 
   deploy-federation-pr:
     needs: deploy-saleor-pr
+    if: ! github.event.pull_request.draft
     runs-on: ubuntu-latest
     steps:
       - name: Check out Federation repo
