--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,7 +2,7 @@ name: Pytest
 
 on:
   pull_request:
-    types: [edited, synchronize, ready_for_review]
+    types: [opened, reopened, synchronize, ready_for_review]
 
   push:
     branches:
@@ -18,6 +18,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' || !github.event.pull_request.draft }}
     container: python:3.8
 
     services:
