--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,4 +3,6 @@
 # @global-owner1 and @global-owner2 will be requested for
 # review when someone opens a pull request.
 /saleor/plugins/ @wecre8-ecommerce/qa @wecre8-ecommerce/backend
+/.github/workflows/pr-deploy.yml @wecre8-ecommerce/qa @wecre8-ecommerce/backend
+/*.txt @wecre8-ecommerce/qa @wecre8-ecommerce/backend
 * @HazemKhaled
