Catch update_fields did not affect any rows errors and return response with message

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -9,6 +9,7 @@ authorizenet==1.1.4
 babel==2.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 beautifulsoup4==4.7.1
 beautifultable==0.7.0
+before-after==1.0.1
 billiard==3.6.4.0; python_version >= "3.6"
 black==21.12b0; python_full_version >= "3.6.2"
 boto3==1.21.8; python_version >= "3.6"
