--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "saleor"
-version = "3.1.3"
+version = "3.1.4"
 description = "A modular, high performance, headless e-commerce platform built with Python, GraphQL, Django, and React."
 authors = [ "Saleor Commerce <hello@saleor.io>" ]
 license = "BSD-3-Clause"
@@ -66,7 +66,10 @@ documentation = "https://docs.saleor.io/"
   posuto = "^2022.3.0"
   cryptography = "^36.0.0"
   graphene = "<3.0"
-  uvicorn = {extras = ["standard"], version = "^0.17.5"}
+
+    [tool.poetry.dependencies.uvicorn]
+    extras = [ "standard" ]
+    version = "^0.17.5"
 
     [tool.poetry.dependencies.celery]
     version = ">=4.4.5,<6.0.0"
