--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -240,3 +240,4 @@ saleor/payment/gateways/cod/
 saleor/payment/gateways/tabby/
 saleor/plugins/customer_group/
 saleor/payment/gateways/checkout_payment/
+saleor/plugins/wishlist/
