--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 adyen==4.0.0
 amqp==5.1.0; python_version >= "3.7"
 aniso8601==7.0.0
+anyio==3.5.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 asgiref==3.5.0; python_version >= "3.7"
 authorizenet==1.1.4
 babel==2.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 beautifulsoup4==4.7.1
 billiard==3.6.4.0; python_version >= "3.7"
-boto3==1.21.18; python_version >= "3.6"
-botocore==1.24.18; python_version >= "3.6"
+boto3==1.21.21; python_version >= "3.6"
+botocore==1.24.21; python_version >= "3.6"
 braintree==4.14.0
 brotli==1.0.9; platform_python_implementation == "CPython" and python_version >= "3.7"
 brotlicffi==1.0.9.2; platform_python_implementation != "CPython" and python_version >= "3.7"
@@ -21,7 +22,7 @@ click-plugins==1.1.1; python_version >= "3.7"
 click-repl==0.2.0; python_version >= "3.7"
 click==8.0.4; python_full_version >= "3.6.2" and python_full_version < "4.0.0" and python_version >= "3.7"
 colorama==0.4.4; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and platform_system == "Windows" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0" and platform_system == "Windows"
-cryptography==36.0.1; python_version >= "3.6"
+cryptography==36.0.2; python_version >= "3.6"
 cssselect2==0.5.0; python_version >= "3.7"
 deprecated==1.2.13; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.4.0"
 dj-database-url==0.5.0
@@ -46,19 +47,19 @@ django==3.2.12; python_version >= "3.6"
 draftjs-sanitizer==1.0.0
 enmerkar==0.7.1
 et-xmlfile==1.1.0; python_version >= "3.6"
-faker==13.3.1; python_version >= "3.6"
-fonttools==4.30.0; python_version >= "3.7"
-freezegun==1.2.0; python_version >= "3.6"
+faker==13.3.2; python_version >= "3.6"
+fonttools==4.31.1; python_version >= "3.7"
+freezegun==1.2.1; python_version >= "3.6"
 google-api-core==2.7.1; python_version >= "3.7"
-google-auth==2.6.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+google-auth==2.6.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
 google-cloud-core==2.2.3; python_version >= "3.7"
 google-cloud-pubsub==2.11.0; python_version >= "3.6"
-google-cloud-storage==2.1.0; python_version >= "3.7"
+google-cloud-storage==2.2.1; python_version >= "3.7"
 google-crc32c==1.3.0; python_version >= "3.7"
 google-i18n-address==2.5.0
 google-measurement-protocol==1.1.0
 google-resumable-media==2.3.2; python_version >= "3.7"
-googleapis-common-protos==1.55.0; python_version >= "3.7"
+googleapis-common-protos==1.56.0; python_version >= "3.7"
 graphene==2.1.9
 graphql-core==2.3.2
 graphql-relay==2.0.1
@@ -71,10 +72,10 @@ html-to-draftjs==1.0.1
 html2text==2020.1.16; python_version >= "3.5"
 html5lib==1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 httptools==0.4.0; python_version >= "3.7" and python_full_version >= "3.5.0"
-idna==3.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+idna==3.3; python_full_version >= "3.6.2" and python_version >= "3.7"
 importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7"
 jaeger-client==4.8.0; python_version >= "3.7"
-jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+jmespath==1.0.0; python_version >= "3.7"
 jsonfield==3.1.0; python_version >= "3.6"
 kombu==5.2.4; python_version >= "3.7"
 lxml==4.8.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
@@ -124,8 +125,9 @@ rsa==4.8; python_version >= "3.6" and python_version < "4" and (python_version >
 rx==1.6.1
 s3transfer==0.5.2; python_version >= "3.6"
 sendgrid==6.9.7; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-sentry-sdk==1.5.7
+sentry-sdk==1.5.8
 six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+sniffio==1.2.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 soupsieve==2.3.1; python_version >= "3.6"
 sqlparse==0.4.2; python_version >= "3.7"
 starkbank-ecdsa==2.0.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
@@ -137,11 +139,11 @@ thrift==0.15.0; python_version >= "3.7"
 tinycss2==1.1.1; python_version >= "3.7"
 tornado==6.1; python_version >= "3.7"
 typing-extensions==4.1.1; python_version >= "3.6"
-urllib3==1.26.8; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 uvicorn==0.17.6; python_version >= "3.7"
 uvloop==0.16.0; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_version >= "3.7"
 vine==5.0.0; python_version >= "3.7"
-watchgod==0.7; python_version >= "3.7"
+watchgod==0.8; python_version >= "3.7"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.7"
 weasyprint==54.2; python_version >= "3.6"
 webencodings==0.5.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
