--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,7 @@
 adyen==4.0.0
 amqp==5.1.0; python_version >= "3.7"
 aniso8601==7.0.0; python_version >= "3.6" and python_version < "4.0"
+anyio==3.5.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 asgiref==3.5.0; python_version >= "3.7" and python_version < "4.0"
 astroid==2.9.3; python_full_version >= "3.6.2"
 atomicwrites==1.4.0; python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.4.0" and python_version < "4.0"
@@ -11,8 +12,8 @@ beautifulsoup4==4.7.1
 beautifultable==0.7.0
 billiard==3.6.4.0; python_version >= "3.7"
 black==22.1.0; python_full_version >= "3.6.2"
-boto3==1.21.18; python_version >= "3.6"
-botocore==1.24.18; python_version >= "3.6"
+boto3==1.21.21; python_version >= "3.6"
+botocore==1.24.21; python_version >= "3.6"
 braintree==4.14.0
 brotli==1.0.9; platform_python_implementation == "CPython" and python_version >= "3.7"
 brotlicffi==1.0.9.2; platform_python_implementation != "CPython" and python_version >= "3.7"
@@ -29,7 +30,7 @@ click==8.0.4; python_version >= "3.7" and python_full_version >= "3.6.2" and pyt
 codecov==2.1.12; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 colorama==0.4.4; sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.7" and python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0") and (python_version >= "2.7" and python_full_version < "3.0.0" and platform_system == "Windows" or python_full_version >= "3.5.0" and platform_system == "Windows") and platform_system == "Windows" and (python_version >= "3.7" and python_full_version < "3.0.0" and sys_platform == "win32" and python_version < "4.0" or sys_platform == "win32" and python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.5.0")
 coverage==6.3.2; python_version >= "3.7"
-cryptography==36.0.1; python_version >= "3.6"
+cryptography==36.0.2; python_version >= "3.6"
 cssselect2==0.5.0; python_version >= "3.7"
 deprecated==1.2.13; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.4.0"
 distlib==0.3.4; python_full_version >= "3.6.1"
@@ -62,21 +63,21 @@ draftjs-sanitizer==1.0.0
 enmerkar==0.7.1
 et-xmlfile==1.1.0; python_version >= "3.6"
 execnet==1.9.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-faker==13.3.1; python_version >= "3.6"
+faker==13.3.2; python_version >= "3.6"
 filelock==3.6.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 flake8==4.0.1; python_version >= "3.6"
-fonttools==4.30.0; python_version >= "3.7"
-freezegun==1.2.0; python_version >= "3.6"
+fonttools==4.31.1; python_version >= "3.7"
+freezegun==1.2.1; python_version >= "3.6"
 google-api-core==2.7.1; python_version >= "3.7"
-google-auth==2.6.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+google-auth==2.6.2; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
 google-cloud-core==2.2.3; python_version >= "3.7"
 google-cloud-pubsub==2.11.0; python_version >= "3.6"
-google-cloud-storage==2.1.0; python_version >= "3.7"
+google-cloud-storage==2.2.1; python_version >= "3.7"
 google-crc32c==1.3.0; python_version >= "3.7"
 google-i18n-address==2.5.0
 google-measurement-protocol==1.1.0
 google-resumable-media==2.3.2; python_version >= "3.7"
-googleapis-common-protos==1.55.0; python_version >= "3.7"
+googleapis-common-protos==1.56.0; python_version >= "3.7"
 graphene-django==2.15.0; python_version >= "3.6" and python_version < "4.0"
 graphene==2.1.9
 graphql-core==2.3.2; python_version >= "3.6" and python_version < "4.0"
@@ -90,20 +91,20 @@ html-to-draftjs==1.0.1
 html2text==2020.1.16; python_version >= "3.5"
 html5lib==1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 httptools==0.4.0; python_version >= "3.7" and python_full_version >= "3.5.0"
-identify==2.4.11; python_version >= "3.7" and python_full_version >= "3.6.1"
-idna==3.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
+identify==2.4.12; python_version >= "3.7" and python_full_version >= "3.6.1"
+idna==3.3; python_full_version >= "3.6.2" and python_version >= "3.7"
 importlib-metadata==4.11.3; python_version < "3.10" and python_version >= "3.7"
 iniconfig==1.1.1; python_version >= "3.7" and python_version < "4.0"
 isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0"
 jaeger-client==4.8.0; python_version >= "3.7"
 jinja2==3.0.3; python_version >= "3.6"
-jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
+jmespath==1.0.0; python_version >= "3.7"
 jsonfield==3.1.0; python_version >= "3.6"
 kombu==5.2.4; python_version >= "3.7"
 lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 lxml==4.8.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 markdown==3.3.6; python_version >= "3.6"
-markupsafe==2.1.0; python_version >= "3.7"
+markupsafe==2.1.1; python_version >= "3.7"
 maxminddb==2.2.0; python_version >= "3.6"
 mccabe==0.6.1; python_version >= "3.6" and python_full_version >= "3.6.2"
 measurement==3.2.0
@@ -157,7 +158,7 @@ pytest-mock==3.7.0; python_version >= "3.7"
 pytest-recording==0.12.0; python_version >= "3.5"
 pytest-socket==0.5.1; python_version >= "3.7" and python_version < "4.0"
 pytest-xdist==2.5.0; python_version >= "3.6"
-pytest==7.1.0; python_version >= "3.7"
+pytest==7.1.1; python_version >= "3.7"
 python-crontab==2.6.0
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
 python-dotenv==0.19.2; python_version >= "3.7"
@@ -177,9 +178,10 @@ rsa==4.8; python_version >= "3.6" and python_version < "4" and (python_version >
 rx==1.6.1
 s3transfer==0.5.2; python_version >= "3.6"
 sendgrid==6.9.7; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-sentry-sdk==1.5.7
+sentry-sdk==1.5.8
 singledispatch==3.7.0; python_version >= "3.6" and python_version < "4.0"
 six==1.16.0; python_full_version >= "3.6.1" and python_version >= "3.7" and python_version < "4.0" and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5") and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.3.0")
+sniffio==1.2.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 snowballstemmer==2.2.0; python_version >= "3.6"
 soupsieve==2.3.1; python_version >= "3.6"
 sqlparse==0.4.2; python_version >= "3.7" and python_version < "4.0"
@@ -195,18 +197,18 @@ tomli==2.0.1; python_version >= "3.7" and python_full_version >= "3.6.2" and (py
 tornado==6.1; python_version >= "3.7"
 tox==3.24.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 types-pkg-resources==0.1.3
-types-python-dateutil==2.8.9
+types-python-dateutil==2.8.10
 types-pytz==2021.3.5
-types-requests==2.27.12
+types-requests==2.27.13
 types-urllib3==1.26.11
 typing-extensions==4.1.1; python_version < "3.10" and python_full_version >= "3.6.2" and python_version >= "3.6"
-urllib3==1.26.8; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
+urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 uvicorn==0.17.6; python_version >= "3.7"
 uvloop==0.16.0; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_version >= "3.7"
 vcrpy==4.1.1; python_version >= "3.5"
 vine==5.0.0; python_version >= "3.7"
 virtualenv==20.13.3; python_full_version >= "3.6.1"
-watchgod==0.7; python_version >= "3.7"
+watchgod==0.8; python_version >= "3.7"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.7"
 weasyprint==54.2; python_version >= "3.6"
 webencodings==0.5.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
