--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
     hooks:
       - id: trailing-whitespace
         exclude: ^templates/templated_email/compiled/
-        exclude_types: [svg]
+        exclude_types: [svg,graphql]
       - id: end-of-file-fixer
         exclude: ^templates/templated_email/compiled/
         exclude_types: [svg]
