--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ documentation = "https://docs.saleor.io/"
   opentracing = "^2.3.0"
   phonenumberslite = "^8.12.25"
   prices = "^1.0"
-  psycopg2-binary = "^2.8.3"
+  psycopg2 = "^2.8.3"
   razorpay = "^1.2"
   requests = "^2.22"
   sentry-sdk = "^1.0"
