--- a/requirements.txt
+++ b/requirements.txt
@@ -97,7 +97,7 @@ promise==2.3
 prompt-toolkit==3.0.28; python_full_version >= "3.6.2" and python_version >= "3.7"
 proto-plus==1.20.3; python_version >= "3.6"
 protobuf==3.19.4
-psycopg2-binary==2.9.3; python_version >= "3.6"
+psycopg2==2.9.3; python_version >= "3.6"
 pyasn1-modules==0.2.8; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7"
 pyasn1==0.4.8; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7") or python_full_version >= "3.6.0" and python_version >= "3.7" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
 pybars3==0.9.7
