--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ documentation = "https://docs.saleor.io/"
   cryptography = "^36.0.0"
   graphene = "<3.0"
   uvicorn = {extras = ["standard"], version = "^0.17.5"}
+  Authlib = "^1.0.0"
 
     [tool.poetry.dependencies.celery]
     version = ">=4.4.5,<6.0.0"
