--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@ amqp==5.1.0; python_version >= "3.7"
 aniso8601==7.0.0
 anyio==3.5.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 asgiref==3.5.0; python_version >= "3.7"
+async-timeout==4.0.2; python_version >= "3.7"
 authorizenet==1.1.4
 babel==2.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 beautifulsoup4==4.7.1
 billiard==3.6.4.0; python_version >= "3.7"
-boto3==1.21.22; python_version >= "3.6"
-botocore==1.24.22; python_version >= "3.6"
+boto3==1.21.27; python_version >= "3.6"
+botocore==1.24.27; python_version >= "3.6"
 braintree==4.14.0
 brotli==1.0.9; platform_python_implementation == "CPython" and python_version >= "3.7"
 brotlicffi==1.0.9.2; platform_python_implementation != "CPython" and python_version >= "3.7"
@@ -47,7 +48,7 @@ django==3.2.12; python_version >= "3.6"
 draftjs-sanitizer==1.0.0
 enmerkar==0.7.1
 et-xmlfile==1.1.0; python_version >= "3.6"
-faker==13.3.2; python_version >= "3.6"
+faker==13.3.3; python_version >= "3.6"
 fonttools==4.31.2; python_version >= "3.7"
 freezegun==1.2.1; python_version >= "3.6"
 google-api-core==2.7.1; python_version >= "3.7"
@@ -64,8 +65,8 @@ graphene==2.1.9
 graphql-core==2.3.2
 graphql-relay==2.0.1
 grpc-google-iam-v1==0.12.3; python_version >= "3.6"
-grpcio-status==1.44.0; python_version >= "3.7"
-grpcio==1.44.0; python_version >= "3.7"
+grpcio-status==1.45.0; python_version >= "3.7"
+grpcio==1.45.0; python_version >= "3.7"
 gunicorn==20.1.0; python_version >= "3.5"
 h11==0.13.0; python_version >= "3.7"
 html-to-draftjs==1.0.1
@@ -109,7 +110,7 @@ pyparsing==3.0.7; python_version >= "3.7"
 pyphen==0.12.0; python_version >= "3.7"
 python-crontab==2.6.0
 python-dateutil==2.8.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
-python-dotenv==0.19.2; python_version >= "3.7"
+python-dotenv==0.20.0; python_version >= "3.7"
 python-http-client==3.3.7; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 python-json-logger==2.0.2; python_version >= "3.5"
 python-magic-bin==0.4.14; sys_platform == "win32"
@@ -119,7 +120,7 @@ pytz==2022.1; python_version >= "3.7" and python_full_version < "3.0.0" or pytho
 pyxb==1.2.5
 pyyaml==6.0; python_version >= "3.7"
 razorpay==1.3.0
-redis==4.1.4; python_version >= "3.7"
+redis==4.2.0; python_version >= "3.7"
 requests==2.27.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 rsa==4.8; python_version >= "3.6" and python_version < "4" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
 rx==1.6.1
@@ -131,23 +132,23 @@ sniffio==1.2.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 soupsieve==2.3.1; python_version >= "3.6"
 sqlparse==0.4.2; python_version >= "3.7"
 starkbank-ecdsa==2.0.3; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-stripe==2.67.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
+stripe==2.68.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 sympy==1.10.1; python_version >= "3.7"
 text-unidecode==1.3
 threadloop==1.0.2; python_version >= "3.7"
 thrift==0.15.0; python_version >= "3.7"
 tinycss2==1.1.1; python_version >= "3.7"
 tornado==6.1; python_version >= "3.7"
-typing-extensions==4.1.1; python_version >= "3.6"
+typing-extensions==4.1.1; python_version >= "3.7"
 urllib3==1.26.9; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.7"
 uvicorn==0.17.6; python_version >= "3.7"
 uvloop==0.16.0; sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy" and python_version >= "3.7"
 vine==5.0.0; python_version >= "3.7"
-watchgod==0.8; python_version >= "3.7"
+watchgod==0.8.1; python_version >= "3.7"
 wcwidth==0.2.5; python_full_version >= "3.6.2" and python_version >= "3.7"
 weasyprint==54.2; python_version >= "3.6"
 webencodings==0.5.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 websockets==10.2; python_version >= "3.7"
-wrapt==1.13.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.5.0"
+wrapt==1.14.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_version >= "3.7" and python_full_version >= "3.5.0"
 zipp==3.7.0; python_version < "3.10" and python_version >= "3.7"
 zopfli==0.2.1; python_version >= "3.7"
